Fix left navbar alignment.

--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -1,12 +1,12 @@
 .header-left {
   grid-column: 1/2;
   background-color: white;
-  min-width: 300px;
-  max-width: 300px;
+  box-shadow: 4px 0px 8px rgba(0, 0, 0, 0.25);
+  height: 100%;
+  position: fixed;
   display: flex;
   flex-direction: column;
   padding: 30px;
-  box-shadow: 4px 0px 8px rgba(0, 0, 0, 0.25);
   gap: 20px;
 
   .nav-brand {
